# grid-pathfinding-game-cv

./: .gitignore  CMakeLists.txt  README.md
_zip_audit/: README.md
_zip_audit/docs/: design_core.md
_zip_audit/examples/: run_sim_sgg.cpp
_zip_audit/grid/core/: Agent.h
_zip_audit/maps/: large.json
_zip_audit/src/: example.cpp
_zip_audit/tools/: make_submission_zip.ps1  run_sim_sgg.ps1
_zip_check/: CMakeLists.txt  README.md
_zip_check/configs/: example_agents.txt  large_agents.txt
_zip_check/docs/: design_sim.md  requirements.md
_zip_check/examples/: run_sim.cpp
_zip_check/grid/core/: Agent.cpp  types.h
_zip_check/grid/pathfinding/: AStar.cpp
_zip_check/grid/sim/: Simulation.cpp
_zip_check/grid/ui/: AsciiRenderer.h
_zip_check/include/: example.h
_zip_check/maps/: huge.json
_zip_check/src/: main.cpp
examples/: run_sgg.cpp  run_sim_sgg.cpp
grid/app/: Entity.h  GlobalState.h
grid/core/: Map.cpp  Map.h
grid/pathfinding/: AStar.cpp  AStar.h
grid/sim/: Simulation.cpp  Simulation.h
grid/ui/: AsciiRenderer.cpp
maps/: arena_rings.json  example.json  large.json  maze_library_like.json  pacman_classic.json  pacman_crossroads.json  pacman_ms1.json  pacman_ms2.json  sandbox.json  symmetric_lanes.json  zigzag_channels.json
tests/: pathfinding_test.cpp  test_example.cpp
tools/: run_sim_sgg.ps1  test_example.cpp  validate_maps.ps1
